fix game and volcan

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,5 +7,36 @@
 @layer base {
   html, body {
     @apply bg-white text-gray-900;
+    /* Prevenir zoom en inputs y mejorar experiencia táctil */
+    touch-action: manipulation;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Permitir selección de texto solo donde sea necesario */
+  p, h1, h2, h3, h4, h5, h6, span, div[class*="text"] {
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+  }
+  
+  /* Mejorar controles táctiles */
+  button, [role="button"] {
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
+  }
+  
+  /* Optimizar canvas para touch */
+  canvas {
+    touch-action: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
   }
 }
